# Case-Interview-Agent

./: .env  .gitignore  Dockerfile  Dockerfile.keepalive  PROJECT_HANDOFF.md  README.md  a_row_gate.py  add_concept_descriptions.cypher  add_framework_descriptions.cypher  blackbox_user_guide.md  chainlit.md  d_row_gate.py  deploy_arms.sh  deploy_keepalive.sh  dockerignore  final_restructure_knowledge_graph.cypher  firebase_key.json  keep_alive.py  pyproject.toml  restructure_knowledge_graph.cypher  seed_knowledge_graph.cypher  step2_delegation_gate.py  step2_gate.py  step4b_gate.py  step4c_gate.py  step4d_gate.py  step4f_gate.py  step5_gate.py  step6_collapse_strip_source_refs.py  step7_finish_imports.py  step7_migrate.py  test_neo4j.py
.chainlit/: config.toml
analysis/: 1_pull_snapshot.py  2_build_workbook.py  3_novel_registry.py  4_merge.py
backend/: _bootstrap.py  base.py  black_box_agent.py  cases.py  coach_agent.py  concept_swap.py  explainable_agent.py  hitl_agent.py  keep_alive.py  knowledge_base.json  knowledge_graph.py  llm.py  logger.py  rag_explainer.py
backend/agents/: base.py  black_box.py  explainable.py  hitl.py
backend/agents/prompts/: base.py  black_box.py  explainable.py  hitl.py
backend/domain/: grounding.py  matching.py
backend/interaction/: __init__.py  handlers.py  intents.py  warmup.py
backend/knowledge/: knowledge_base.json  knowledge_base.py  warmup_kb.json  warmup_kb.py
backend/logging/: __init__.py  events.py  sink.py
backend/tools/: concept_swap.py  rag_explainer.py
frontend/: app.py
public/: timer.js
(+5 files in other folders)
